app/assets/stylesheets/locale_lab/components/current-application.css
.current-application {
  min-height: var(--base-size-40);
  padding-left: var(--base-size-24);
  margin-bottom: var(--base-size-16);

  .application,
  .branch {
    display: block;
  }

  .application {
    font-weight: var(--text-body-weight-bold);
    margin-bottom: var(--base-size-2);
  }

  .branch {
    display: flex;
    flex-wrap: nowrap;
    align-items: center;
    color: var(--fgColor-brand);
    font-weight: var(--text-body-weight-medium);

    .branch-icon {
      fill: var(--fgColor-brand);
      margin-right: var(--base-size-6);
    }

    span {
      flex: 1;
    }
  }
}

